bridge/base/0-portfolio-project-namespace.yaml
#! 0-portfolio-project-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: portfolio-project
    labels:
        com.docker.compose.project: portfolio-project
