bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: portfolio-project
    labels:
        com.docker.compose.project: portfolio-project
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: portfolio-project
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: portfolio-project
                com.docker.compose.service: backend
                com.docker.compose.network.portfolio-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: portfolio-backend
                  image: portfolio-project-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-8080
                      containerPort: 8080
