bridge/base/keycloak-service.yaml
#! keycloak-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: keycloak-published
    namespace: portfolio-project
    labels:
        com.docker.compose.project: portfolio-project
        com.docker.compose.service: keycloak
spec:
    selector:
        com.docker.compose.project: portfolio-project
        com.docker.compose.service: keycloak
    ports:
        - name: keycloak-8081
          port: 8081
          protocol: TCP
          targetPort: keycloak-8080
