bridge/base/mysql-expose.yaml
#! mysql-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mysql
    namespace: portfolio-project
    labels:
        com.docker.compose.project: portfolio-project
        com.docker.compose.service: mysql
spec:
    selector:
        com.docker.compose.project: portfolio-project
        com.docker.compose.service: mysql
    ports:
        - name: mysql-3306
          port: 3306
          targetPort: mysql-3306
        - name: mysql-33060
          port: 33060
          targetPort: mysql-33060
